--- a/First.tex
+++ b/First.tex
@@ -1,1 +1,17 @@
+\documentclass{xourse}
+\title{This Is My Course - It Is The Best!}
 
+
+\begin{document}
+\begin{abstract}
+We discuss stuff in this course. The only stuff we discuss is awesome stuff.
+\end{abstract}
+\maketitle
+
+To learn about stuff, we must first do stuff. The things we do are
+1. Do Stuff.
+2. Read Stuff.
+3. Practice Stuff.
+
+\actifity{FirstActivity}
+\end{document}
